fixed body margin and alignment of favortied items.

--- a/css/card.css
+++ b/css/card.css
@@ -2,3 +2,7 @@
     margin: 1vmax;
     
     }
+
+    .favorites{
+display: none;
+    }
