--- a/css/px-picker-main-page.css
+++ b/css/px-picker-main-page.css
@@ -15,6 +15,8 @@ a{
 
 body {
     background-image:linear-gradient (#b0a330, white);
+    margin: 1px;
+
 }
 
 /*  THE BELOW CODE MODIFIES THE ACCORDION STYLE MENU ITEM IN TEST
